# uniview-lang

./: .env  .gitattributes  .gitignore  .gitmodules  .npmignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  changelog.md  code-of-conduct.md  contributing.md  install-tools.js  installation.md  main.cpp  out.ll  package-lock.json  package.json  parse-test.js  sum.c  test.uv
.github/workflow/: execution.yml
.github/workflows/: execution.yml
compiler/: compile.js  reserved.js  test.js  timers.js
compiler/component/: class.js  execution.js  file.js  function.js  function_instance.js  generate.js  impl.js  import.js  project.js  resolve.js  struct.js  template.js  trait.js  typeRef.js  typedef.js
compiler/component/execution/: base.js  expr.js  flow.js  index.js
compiler/component/memory/: constant.js  probability.js  scope.js  struct.js  value.js  variable.js
compiler/helper/: error.js
compiler/middle/: alloc.js  call.js  compare.js  extend.js  failure.js  fragment.js  id.js  instruction.js  label.js  latent.js  llvm.js  load.js  phi.js  procedure.js  ptrtoint.js  raw.js  select.js  set.js  struct.js  switch.js  type.js
compiler/parser/: .gitignore  build.js  expr.js  flatten.js  flattern.js  parse.js  syntax.bnf  syntax.json
compiler/primative/: array.js  bitcast.js  blank.js  clone.js  either.js  function_instance.js  main.js  printf.js  sizeof.js  static_cast.js  types.js
docs/: compilation.md
lib/: .gitignore  CMakeLists.txt  install.bash  install.bat
runtime/: .gitignore  runtime.cpp  runtime.ll
src/: .gitignore  main.uv
src/compiler/: .gitignore
src/core/: main.c  main.h
src/parser/: .gitignore
src/uvc-tool/: main.c  main.cpp  main.h  main.hpp  main.uv  verbose.c  verbose.cpp  verbose.h  verbose.hpp
std/: .gitignore  alloc.uv  math.uv  memory.ll  memory.uv  print.ll  print.uv  string.ll  string.uv  time.uv  uniview.uv
std/experimental/: file.uv  time.uv
test/pre-alpha/: _manifest_  cast.uv  class.uv  compare.uv  either.uv  first-execution.uv  hello-world.uv  if.uv  lending.uv  library-behaviour.uv  math.uv  print.uv  string-test.uv  struct.uv  time.uv
test/pre-alpha/cast/: main.uv
test/pre-alpha/library-behaviour/: main.uv  reference.ll
tools/: .gitignore  env-bind.js  install.js
